Fix: Overflow

--- a/packages/ui/src/components/ui/dialog.css
+++ b/packages/ui/src/components/ui/dialog.css
@@ -31,7 +31,7 @@
     @apply flex flex-col gap-2 px-6 pt-6;
   }
   .ui--dialog-body {
-    @apply h-full flex flex-col gap-2 px-6;
+    @apply h-full flex flex-col gap-2 px-6 overflow-y-auto;
   }
   .ui--dialog-footer {
     @apply flex gap-2 sm:flex-row px-6 pb-6 sm:justify-end;
